[package]
name = "walk_ws"
version = "0.1.0"
authors = ["Sergey Ignatov <sergey.ignatov@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
tokio = { version = "0.2.22", features = ["full"] }
futures-util = "0.3.5"
log = "0.4"
env_logger = "0.6.1"
tokio-tungstenite = "0.11.0"
url = "2.1.0"
futures-channel-preview = "0.2.2"
jwalk = "0.5"

#async-tungstenite= { version = "=0.4.2", features = ["tokio-runtime"]}